data/derived/comb/progs/unify/prog4620.ml.out
Characters 73-75:
  | Sine e -> pi*e
              ^^
Error: This expression has type float but an expression was expected of type
         int
